# intel_8080_emulator

./: .gitignore  CMakeLists.txt  README.md  research.txt  run_tests.sh
docs/: web-links.txt
intel_8080_emulator/: CmakeLists.txt  build.ps1
intel_8080_emulator/include/: i8080.h
intel_8080_emulator/src/: i8080.c  instructions.c  main.c  utils.c
intel_8080_emulator/test/: CMakeLists.txt  run_tests.ps1
intel_8080_emulator/test/src/: CMakeLists.txt  test_instructions.c  test_utils.c
src/: CMakeLists.txt  MAKEFILE  i8080.c  i8080.h  i8080_tests.c  i8086.c  i8086.h  instructions.c  instructions.h  makefile  opcode_parser.c  opcode_parser.h  test.c  utils.c  utils.h
test/: CMakeLists.txt  test_utils.c
